--- a/escalade/escalade-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/escalade/escalade-webapp/src/main/webapp/WEB-INF/web.xml
@@ -24,4 +24,10 @@
     <filter-name>struts2</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
+
+  <resource-ref>
+    <res-ref-name>jdbc/DB_TICKET</res-ref-name>
+    <res-type>javax.sql.DataSource</res-type>
+    <res-auth>Container</res-auth>
+  </resource-ref>
 </web-app>
