--- a/escalade/pom.xml
+++ b/escalade/pom.xml
@@ -129,6 +129,17 @@
                   <version>1</version>
               </dependency>
 
+              <dependency>
+                     <groupId>org.springframework.boot</groupId>
+                     <artifactId>spring-boot-starter-security</artifactId>
+                  <version>2.1.4</version>
+              </dependency>
+              <dependency>
+                  <groupId>org.springframework.security</groupId>
+                  <artifactId>spring-security-crypto</artifactId>
+                  <version>5.1.5.RELEASE</version>
+              </dependency>
+
               <!-- Gestion des logs avec Log4j -->
               <dependency>
                   <groupId>commons-logging</groupId>
