--- a/escalade/pom.xml
+++ b/escalade/pom.xml
@@ -178,6 +178,12 @@
                   <version>9.4.1212</version>
                   <scope>runtime</scope>
               </dependency>
+
+              <dependency>
+                  <groupId>javax.mail</groupId>
+                  <artifactId>mail</artifactId>
+                  <version>1.4</version>
+              </dependency>
           </dependencies>
       </dependencyManagement>
 
