--- a/escalade/escalade-webapp/src/main/resources/application.properties
+++ b/escalade/escalade-webapp/src/main/resources/application.properties
@@ -1,13 +1,9 @@
-server.port = 8443
+server.port =8443
 
+server.ssl.key-store-type =PKCS12
 
-security.require-ssl = true
+server.ssl.key-store =classpath:keystore.p12
 
+server.ssl.key-store-password=password
 
-server.ssl.key-store-type = PKCS12
-
-server.ssl.key-store = classpath: keystore.p12
-
-server.ssl.key-store-password = Yocorps17
-
-server.ssl.key-alias = tomcat
+server.ssl.key-alias=tomcat
