--- a/escalade/pom.xml
+++ b/escalade/pom.xml
@@ -167,6 +167,23 @@
               </dependency>
 
               <dependency>
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot-starter-tomcat</artifactId>
+                  <version>2.1.4.RELEASE</version>
+              </dependency>
+              <dependency>
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot-starter-web</artifactId>
+                  <version>2.1.4.RELEASE</version>
+              </dependency>
+
+              <dependency>
+                  <groupId>org.springframework.boot</groupId>
+                  <artifactId>spring-boot-starter-security</artifactId>
+                  <version>1.5.14.RELEASE</version>
+              </dependency>
+
+              <dependency>
                   <groupId>org.apache.commons</groupId>
                   <artifactId>commons-dbcp2</artifactId>
                   <version>2.1.1</version>
