--- a/escalade/.gitignore
+++ b/escalade/.gitignore
@@ -1,12 +1,3 @@
-/target
-/*-*/target
-
-/.idea
-/.settings
-/.project
+target/
+.idea/
 *.iml
-/*-*/.project
-/*-*/.settings
-/*-*/.classpath
-/*-*/.checkstyle
-/*-*/.springBeans
