--- a/escalade/escalade-webapp/pom.xml
+++ b/escalade/escalade-webapp/pom.xml
@@ -1,21 +1,23 @@
 <?xml version="1.0"?>
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>fr.oc.projet</groupId>
     <artifactId>escalade</artifactId>
     <version>1.0-SNAPSHOT</version>
   </parent>
+
   <groupId>fr.oc.projet</groupId>
   <artifactId>escalade-webapp</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>war</packaging>
   <name>escalade-webapp Maven Webapp</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
-
-
     <dependency>
       <groupId>fr.oc.projet</groupId>
       <artifactId>escalade-business</artifactId>
@@ -35,14 +37,14 @@
       <artifactId>javax.servlet-api</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.glassfish.jaxb</groupId>
-      <artifactId>jaxb-runtime</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>javax.xml.bind</groupId>-->
+<!--      <artifactId>jaxb-api</artifactId>-->
+<!--    </dependency>-->
+<!--    <dependency>-->
+<!--      <groupId>org.glassfish.jaxb</groupId>-->
+<!--      <artifactId>jaxb-runtime</artifactId>-->
+<!--    </dependency>-->
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -85,10 +87,10 @@
       <artifactId>mail</artifactId>
     </dependency>
 
-    <dependency>
-      <groupId>org.apache.tomcat</groupId>
-      <artifactId>tomcat-catalina</artifactId>
-    </dependency>
+<!--    <dependency>-->
+<!--      <groupId>org.apache.tomcat</groupId>-->
+<!--      <artifactId>tomcat-catalina</artifactId>-->
+<!--    </dependency>-->
 
     <dependency>
       <groupId>junit</groupId>
