--- a/escalade/pom.xml
+++ b/escalade/pom.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+
+    <modelVersion>4.0.0</modelVersion>
 
   <groupId>fr.oc.projet</groupId>
   <artifactId>escalade</artifactId>
@@ -13,7 +14,7 @@
   <properties>
         <projectName>Escalade</projectName>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>11</java.version>
+        <java.version>8</java.version>
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
         <jersey.version>2.28</jersey.version>
@@ -107,7 +108,14 @@
                   <scope>provided</scope>
               </dependency>
 
-
+<!--              <dependency>-->
+<!--                  <groupId>javax.xml.bind</groupId>-->
+<!--                  <artifactId>jaxb-api</artifactId>-->
+<!--              </dependency>-->
+<!--              <dependency>-->
+<!--                  <groupId>org.glassfish.jaxb</groupId>-->
+<!--                  <artifactId>jaxb-runtime</artifactId>-->
+<!--              </dependency>-->
 
               <dependency>
                   <groupId>org.springframework</groupId>
@@ -134,7 +142,7 @@
               <dependency>
                      <groupId>org.springframework.boot</groupId>
                      <artifactId>spring-boot-starter-security</artifactId>
-                  <version>2.1.4</version>
+                  <version>2.1.4.RELEASE</version>
               </dependency>
               <dependency>
                   <groupId>org.springframework.security</groupId>
@@ -177,12 +185,6 @@
                   <groupId>org.springframework.boot</groupId>
                   <artifactId>spring-boot-starter-web</artifactId>
                   <version>2.1.4.RELEASE</version>
-              </dependency>
-
-              <dependency>
-                  <groupId>org.springframework.boot</groupId>
-                  <artifactId>spring-boot-starter-security</artifactId>
-                  <version>1.5.14.RELEASE</version>
               </dependency>
 
               <dependency>
